--- a/user/index.html
+++ b/user/index.html
@@ -81,7 +81,7 @@ pageLanguage: 'en'}, 'google_translate_element');
             </div>
         <div class="bannerleft">
             
-          <h1 class="fadeInLeft wow">Grow Your Capital with <span>BARTELEARNERS LIMITED</span></h1>
+          <h1 class="fadeInLeft wow">Grow Your Capital with <span>GLOBALTRADERS LIMITED</span></h1>
           <p class="fadeInRight wow">Professional Trading On Cryptocurrency, Make Profit On Money Of The Future Today!</p>
                   <div class="registeredbox hvr-bob flash wow" data-wow-duration="2s" data-wow-iteration="100">
               <a href="Register.html" class="hvr-float-shadow fadeInUp wow">REGISTER</a>
