--- a/user/index.html
+++ b/user/index.html
@@ -658,7 +658,7 @@ pageLanguage: 'en'}, 'google_translate_element');
 <div class="footerwrap">
     
     
-<div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=55%20Storth%20Lane,%20Sheffield,%20England,%20S10%203HP+(PREGRESSIVE%20FUNDS)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+<div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.bing.com/search?q=340+Heald+Way+Ste+226%2C+The+Villages%2C+FL+32163&cvid=6acb3909e77d42cfa37a6309233b65a1&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQABhAMgYIAhAAGEAyBggDEAAYQDIGCAQQABhA0gEIMTU2M2owajmoAgCwAgA&FORM=ANAB01&PC=U531"></iframe></div>
 
 
       <div class="footerbottom">
@@ -696,7 +696,7 @@ pageLanguage: 'en'}, 'google_translate_element');
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "+447502333805", // WhatsApp number
+
             call_to_action: "Message us", // Call to action
             position: "left", // Position may be 'right' or 'left'
         };
