--- a/user/Faq.html
+++ b/user/Faq.html
@@ -85,7 +85,7 @@ pageLanguage: 'en'}, 'google_translate_element');
         <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Is Globaltraders.ltd a registered company?</a> </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body">Yes, Globaltraders.ltd is registered in the United Kingdom  as "Globaltraders.ltd" with registration number #10653773 .</div>
+        <div class="panel-body">Yes, Globaltraders.ltd is registered in the United States  as "Globaltraders.ltd" .</div>
         </div>
         </div>
         <div class="panel panel-default">
