--- a/user/Registartion complete.html
+++ b/user/Registartion complete.html
@@ -99,7 +99,7 @@ You are now an official member of this program. You can login to your account to
 <div class="footerwrap">
     
     
-<div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=55%20Storth%20Lane,%20Sheffield,%20England,%20S10%203HP+(PREGRESSIVE%20FUNDS)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+<div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.bing.com/search?q=340+Heald+Way+Ste+226%2C+The+Villages%2C+FL+32163&cvid=6acb3909e77d42cfa37a6309233b65a1&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQABhAMgYIAhAAGEAyBggDEAAYQDIGCAQQABhA0gEIMTU2M2owajmoAgCwAgA&FORM=ANAB01&PC=U531"></iframe></div>
 
 
       <div class="footerbottom">
