--- a/user/about.html
+++ b/user/about.html
@@ -140,15 +140,15 @@ pageLanguage: 'en'}, 'google_translate_element');
 
 		<div class="feature">
 				<img src="styles/images/feat4.png" alt="" />
-				<h1>UK registered company</h1>
-				<p>Our company is legally registered in the United Kingdom as “Globaltraders.ltd".</p>
+				<h1>USA registered company</h1>
+				<p>Our company is legally registered in the United States as “Globaltraders.ltd".</p>
 		</div>
 
 
 		<div class="feature">
 				<img src="styles/images/feat5.png" alt="" />
 				<h1>instant withdrawals</h1>
-				<p>Our withdrawals are all processed instantly after they are requested . Minimum withdrawal is only $50.</p>
+				<p>Our withdrawals are all processed instantly after they are requested . Minimum withdrawal is only $10.</p>
 		</div>
 
 
