--- a/user/index.html
+++ b/user/index.html
@@ -374,11 +374,11 @@ pageLanguage: 'en'}, 'google_translate_element');
         <div class="planbox one flipInY wow">
 		<div class="plantop"><img src="styles/images/plan1.png" alt="" /></div>	
           <div class="planheader">
-            <div class="planname"><span></span>SILVER PLAN </div>
+            <div class="planname"><span></span>STARTER PLAN </div>
           </div>
           <div class="planspec">
             <ul>
-               <li>25%  after 24 hours<span> </span></li>
+               <li>12%  after 24 hours<span> </span></li>
           <li>Min Deposit: <span>$50</span></li>
           <li>Max Deposit: <span>$499</span></li>
           
@@ -391,11 +391,11 @@ pageLanguage: 'en'}, 'google_translate_element');
             <div class="planbox two flipInY wow">
 			<div class="plantop"><img src="styles/images/plan2.png" alt="" /></div>	
           <div class="planheader">
-            <div class="planname"><span></span> GOLD PLAN</div>
+            <div class="planname"><span></span> SILVER PLAN</div>
           </div>
           <div class="planspec">
             <ul>
-             <li>50% After 48 hours<span> </span></li>
+             <li>20% After 24 hours<span> </span></li>
           <li>Min Deposit: <span>$500</span></li>
           <li>Max Deposit: <span>$3,999</span></li>
           <li>Instant Withdrawal</li>
@@ -407,13 +407,13 @@ pageLanguage: 'en'}, 'google_translate_element');
            <div class="planbox three flipInY wow">
 		<div class="plantop"><img src="styles/images/plan3.png" alt="" /></div>	
           <div class="planheader">
-            <div class="planname"><span></span> PLATINUM PLAN </div>
+            <div class="planname"><span></span> GOLD PLAN </div>
           </div>
           <div class="planspec">
             <ul>
-              <li>75% after  72 hours<span> </span></li>
+              <li>40% after  48 hours<span> </span></li>
           <li>Min Deposit: <span>$4,000</span></li>
-          <li>Max Deposit: <span>$9,999</span></li>
+          <li>Max Deposit: <span>$14,999</span></li>
            <li>Instant Withdrawal</li>
            <li>Referrer bonus: 10%</li>
             </ul>
@@ -428,9 +428,9 @@ pageLanguage: 'en'}, 'google_translate_element');
           </div>
           <div class="planspec">
              <ul>
-             <li>100% after 96 hours<span> </span></li>
-          <li>Min Deposit: <span>$10,000</span></li>
-          <li>Max Deposit: <span>$19,999</span></li>
+             <li>75% after 48 hours<span> </span></li>
+          <li>Min Deposit: <span>$15,000</span></li>
+          <li>Max Deposit: <span>$49,999</span></li>
          <li>Instant Withdrawal</li>
            <li>Referrer bonus: 10%</li>
             </ul>
@@ -444,9 +444,9 @@ pageLanguage: 'en'}, 'google_translate_element');
           </div>
           <div class="planspec">
              <ul>
-             <li>50% after  120 hours<span> </span></li>
-          <li>Min Deposit: <span>$20,000</span></li>
-          <li>Max Deposit: <span>$99,999</span></li>
+             <li>100% after  72 hours<span> </span></li>
+          <li>Min Deposit: <span>$50,000</span></li>
+          <li>Max Deposit: <span>UNLIMITED</span></li>
          <li>Instant Withdrawal</li>
            <li>Referrer bonus: 10%</li>
             </ul>
