--- a/user/index.html
+++ b/user/index.html
@@ -239,7 +239,7 @@ pageLanguage: 'en'}, 'google_translate_element');
 			<p>Nowadays cryptocurrency is one of the main payment instruments, which can be used online. Globaltraders.ltd has been using this kind of digital payment for quite a while to gain and raise profit.</p>
 			<p><div class="registeredbox hvr-bob flash wow">
               <a href="about.html" class="hvr-float-shadow fadeInUp wow">Read More</a>
-              <a href="styles/images/welcomethumb.png" class="hvr-float-shadow fadeInUp wow">Certificate</a>
+              <a href="user/styles/images/Certificate.jpg" class="hvr-float-shadow fadeInUp wow">Certificate</a>
           </div></p>
          </div>
          
