--- a/user/index.html
+++ b/user/index.html
@@ -16,7 +16,7 @@
 <script src="styles/wow.min.js"></script>
 <script src="deposit.js"></script>
 <style>
-    
+    <script src="//code.tidio.co/dja2esru1grrwfdouqoa9rhvds9sm02k.js" async></script>
 </style>
 </head>
 <body>
