--- a/user/Register.html
+++ b/user/Register.html
@@ -156,7 +156,7 @@
  <input type=text class=inpts  size=30 name="ether_wallet" value=""></td>
 </tr>
 <tr>
- <td><label> TRX wallet address</label>
+ <td><label> Ethereum wallet address</label>
  <input type=text class=inpts  size=30 name="trx" value=""></td>
 </tr>
 <tr>
