--- a/user/about.html
+++ b/user/about.html
@@ -100,7 +100,7 @@ pageLanguage: 'en'}, 'google_translate_element');
           </p>
          </div>
          
-           <div class="welcomeleft bounceInRight wow"> <img src="styles/images/welcomethumb.png" alt="" /> </div>
+           <div class="welcomeleft bounceInRight wow"> <img src="styles/images/certt.jpg" alt="" /> </div>
          
       </div>
     </div>
