--- a/user/Affliate.html
+++ b/user/Affliate.html
@@ -16,7 +16,19 @@
 <script src="styles/wow.min.js"></script>
 <script src="deposit.js"></script>
 <style>
-    
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/65c3039a0ff6374032ca1f77/1hm0sc51d';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </style>
 </head>
 <body>
@@ -2976,5 +2988,17 @@ pageLanguage: 'en'}, 'google_translate_element');
             run = setInterval(request, interval);
         }
     </script>
-   <script src="//code.tidio.co/zhq43avsfrtvsfvm9nplmpnoku4urjq5.js" async></script>
+ <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/65c3039a0ff6374032ca1f77/1hm0sc51d';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 </html>
